Adding nine slice node, and starting the monster design
Former-commit-id: 9728a3324a36687d9d2fe9121262b7e82eead2a8 [formerly d7905015e87b5a4d4632c84dd41877b0a6a07518]
Former-commit-id: 1ce372fc403fd1bc5dfac65363e5e019e4554950

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="Source\Render\points.cpp" />
     <ClCompile Include="Source\Render\render.cpp" />
     <ClCompile Include="Source\Render\Scene\primitives.cpp" />
+    <ClCompile Include="Source\Render\Scene\sliced.cpp" />
     <ClCompile Include="Source\Render\text.cpp" />
     <ClCompile Include="Source\Render\textures.cpp" />
     <ClCompile Include="Source\Utility\generalUtility.cpp" />
@@ -276,6 +277,7 @@
     <ClInclude Include="Source\Render\points.h" />
     <ClInclude Include="Source\Render\render.h" />
     <ClInclude Include="Source\Render\Scene\sceneMessages.hpp" />
+    <ClInclude Include="Source\Render\Scene\sliced.h" />
     <ClInclude Include="Source\Render\text.h" />
     <ClInclude Include="Source\Render\textures.h" />
     <ClInclude Include="Source\Utility\generalUtility.h" />
