Making TextBox into a Scene::Text node, fixing localAABB implementation, fixing selection size handles.
Former-commit-id: c1038c69074e8beb16ed6d4da18b07cca7295134 [formerly b7d7d3e879019f78b624abc526d14a5ae6a4a844]
Former-commit-id: 094ae552a244ac471c1d5a0c6f55cd43aaf4b17b

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -191,7 +191,8 @@
     <ClCompile Include="Source\Render\render.cpp" />
     <ClCompile Include="Source\Render\Scene\primitives.cpp" />
     <ClCompile Include="Source\Render\Scene\sliced.cpp" />
-    <ClCompile Include="Source\Render\text.cpp" />
+    <ClCompile Include="Source\Render\Scene\text.cpp" />
+    <ClCompile Include="Source\Render\formattedText.cpp" />
     <ClCompile Include="Source\Render\textures.cpp" />
     <ClCompile Include="Source\Utility\generalUtility.cpp" />
     <ClCompile Include="Source\Utility\notification.cpp" />
@@ -278,7 +279,8 @@
     <ClInclude Include="Source\Render\render.h" />
     <ClInclude Include="Source\Render\Scene\sceneMessages.hpp" />
     <ClInclude Include="Source\Render\Scene\sliced.h" />
-    <ClInclude Include="Source\Render\text.h" />
+    <ClInclude Include="Source\Render\Scene\text.h" />
+    <ClInclude Include="Source\Render\formattedText.h" />
     <ClInclude Include="Source\Render\textures.h" />
     <ClInclude Include="Source\Utility\generalUtility.h" />
     <ClInclude Include="Source\Utility\messageHandler.hpp" />
