--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -206,6 +206,9 @@
     <ClCompile Include="Source\Editor\editorSelection.cpp">
       <Filter>Source Files\Game\Editor</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Render\Scene\emitter.cpp">
+      <Filter>Source Files\Render\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Animation\frameSwapper.h">
@@ -555,6 +558,9 @@
     </ClInclude>
     <ClInclude Include="Source\Editor\editorSelection.h">
       <Filter>Source Files\Game\Editor</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Render\Scene\emitter.h">
+      <Filter>Source Files\Render\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
