Work while at the beach.  Getting grids in.
Former-commit-id: f37e36c0d88d917eb8bed50159123421bd0cf238 [formerly c74dab5c268f1c82ae93ab1c86259cf1569f56a2]
Former-commit-id: d83de3324cb30ffea4efed4f592d6dc5d827ddb4

--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -209,6 +209,9 @@
     <ClCompile Include="Source\Render\Scene\emitter.cpp">
       <Filter>Source Files\Render\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Render\Scene\grid.cpp">
+      <Filter>Source Files\Render\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Animation\frameSwapper.h">
@@ -560,6 +563,9 @@
       <Filter>Source Files\Game\Editor</Filter>
     </ClInclude>
     <ClInclude Include="Source\Render\Scene\emitter.h">
+      <Filter>Source Files\Render\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Render\Scene\grid.h">
       <Filter>Source Files\Render\Scene</Filter>
     </ClInclude>
   </ItemGroup>
