Threading completed!  Particles very efficient now.  Initial texture packing algorithm in place.
Former-commit-id: e58fa6f55c1b2ffe6f0df34bea6e7873c6ed5e3c

--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -215,6 +215,7 @@
     <ClCompile Include="Source\Utility\threadPool.cpp">
       <Filter>Source Files\Utility</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Render\texturePacker.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Animation\frameSwapper.h">
@@ -579,6 +580,9 @@
     </ClInclude>
     <ClInclude Include="Source\Utility\threadPool.h">
       <Filter>Source Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Render\texturePacker.h">
+      <Filter>Source Files\Render</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
